--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,7 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
+include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 DEB_DH_STRIP_ARGS := --dbg-package=libfsoframework-dbg
 DEB_DH_MAKESHLIBS_ARGS_libfsoframework0 := -V"libfsoframework0 (>= $(DEB_UPSTREAM_VERSION))"
