--- a/Makefile.in
+++ b/Makefile.in
@@ -111,6 +111,8 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
+FSOBASICS_CFLAGS = @FSOBASICS_CFLAGS@
+FSOBASICS_LIBS = @FSOBASICS_LIBS@
 GLIB_CFLAGS = @GLIB_CFLAGS@
 GLIB_LIBS = @GLIB_LIBS@
 GREP = @GREP@
