--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: libfsoframework
 Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 Uploaders: Joachim Breitner <nomeata@debian.org>, Luca Capello <luca@pca.it>, Heiko Stuebner <heiko@sntech.de>
-Build-Depends: debhelper (>= 7), cdbs, pkg-config, valac (>= 0.7.3), libvala-dev, libglib2.0-dev, libdbus-1-dev, libdbus-glib-1-dev, fso-misc-vapi, libasound2-dev
-Standards-Version: 3.8.1
+Build-Depends: debhelper (>= 7), cdbs, pkg-config, valac (>= 0.7.5), libvala-dev, libglib2.0-dev, libdbus-1-dev, libdbus-glib-1-dev, libfsobasics-dev, fso-misc-vapi (>= 0+git20090820), libasound2-dev
+Standards-Version: 3.8.3
 Section: libs
 Homepage: http://freesmartphone.org/
 Vcs-Git: git://git.debian.org/git/pkg-fso/fso-misc-vapi.git
