--- a/debian/rules
+++ b/debian/rules
@@ -6,3 +6,5 @@ include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 DEB_DH_STRIP_ARGS := --dbg-package=libfsoframework-dbg
 DEB_DH_MAKESHLIBS_ARGS_libfsoframework0 := -V"libfsoframework0 (>= $(DEB_UPSTREAM_VERSION))"
+
+DEB_INSTALL_DOCS_ALL =
