--- a/config.h.in
+++ b/config.h.in
@@ -43,6 +43,12 @@
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
+/* git version */
+#undef PACKAGE_GITV
+
+/* Module directory */
+#undef PACKAGE_LIBDIR
+
 /* Define to the full name of this package. */
 #undef PACKAGE_NAME
 
@@ -51,6 +57,9 @@
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
+
+/* Define to the home page for this package. */
+#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
