--- a/fsoframework/Makefile.in
+++ b/fsoframework/Makefile.in
@@ -42,6 +42,7 @@ DIST_COMMON = $(dist_vapi_DATA) $(fsoframeworkinclude_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.decl
 @WANT_DEBUG_TRUE@am__append_1 = -g -D DEBUG
+@WANT_DEBUG_TRUE@am__append_2 = -ggdb -O0
 subdir = fsoframework
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -80,10 +81,8 @@ libfsoframework_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 am__objects_1 =
-am__objects_2 = alsa.lo asyncworker.lo common.lo dbus.lo inotifier.lo \
-	interfaces.lo kobjectnotifier.lo object.lo overlay.lo \
-	plugin.lo process.lo subsystem.lo syncasync.lo \
-	$(am__objects_1)
+am__objects_2 = alsa.lo common.lo dbus.lo interfaces.lo object.lo \
+	plugin.lo subsystem.lo $(am__objects_1)
 am_libfsoframework_la_OBJECTS = $(am__objects_2) $(am__objects_1)
 libfsoframework_la_OBJECTS = $(am_libfsoframework_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
@@ -254,38 +253,25 @@ EXTRA_DIST = $(libfsoframework_la_VALASOURCES) fsoframework-2.0.vapi \
 	fsoframework-2.0.deps fsoframework.vala.stamp
 TEST_PROGS = 
 NULL = 
-AM_CPPFLAGS = \
-	-I$(top_srcdir) \
-	$(GLIB_CFLAGS) \
-	$(DBUS_CFLAGS) \
-	$(ALSA_CFLAGS) \
-	$(FSOBASICS_CFLAGS) \
-	$(NULL)
-
-VALAC_ARGS = --basedir $(top_srcdir) --vapidir ../vapi --pkg posix \
-	--pkg linux --pkg glib-2.0 --pkg gmodule-2.0 --pkg gio-2.0 \
-	--pkg dbus-glib-1 --pkg alsa --pkg fsobasics-2.0 --pkg config \
-	--header fsoframework.h --library fsoframework-2.0 \
+AM_CFLAGS = -I$(top_srcdir) $(GLIB_CFLAGS) $(DBUS_CFLAGS) \
+	$(ALSA_CFLAGS) $(FSOBASICS_CFLAGS) $(NULL) $(am__append_2)
+VALAC_ARGS = --basedir $(top_srcdir) --vapidir $(top_srcdir)/vapi \
+	--pkg posix --pkg linux --pkg glib-2.0 --pkg gmodule-2.0 --pkg \
+	gio-2.0 --pkg dbus-glib-1 --pkg alsa --pkg fsobasics-2.0 --pkg \
+	config --header fsoframework.h --library fsoframework-2.0 \
 	$(am__append_1)
-@WANT_DEBUG_TRUE@AM_CFLAGS = -ggdb -O0
 BUILT_SOURCES = fsoframework.vala.stamp
 lib_LTLIBRARIES = \
 	libfsoframework.la
 
 libfsoframework_la_VALASOURCES = \
 	alsa.vala \
-	asyncworker.vala \
 	common.vala \
 	dbus.vala \
-	inotifier.vala \
 	interfaces.vala \
-	kobjectnotifier.vala \
 	object.vala \
-	overlay.vala \
 	plugin.vala \
-	process.vala \
 	subsystem.vala \
-	syncasync.vala \
 	$(NULL)
 
 libfsoframework_la_SOURCES = \
@@ -394,18 +380,12 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/alsa.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/asyncworker.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dbus.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inotifier.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/interfaces.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kobjectnotifier.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/object.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/overlay.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/plugin.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/process.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/subsystem.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/syncasync.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
