--- a/debian/rules
+++ b/debian/rules
@@ -2,9 +2,13 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/simple-patchsys.mk
+include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
-DEB_DH_STRIP_ARGS := --dbg-package=libfsoframework-dbg
-DEB_DH_MAKESHLIBS_ARGS_libfsoframework0 := -V"libfsoframework0 (>= $(DEB_UPSTREAM_VERSION))"
+DEB_CONFIGURE_SCRIPT := ./autogen.sh
 
-DEB_INSTALL_DOCS_ALL =
+DEB_DESTDIR = $(CURDIR)/debian/tmp/
+
+DEB_MAKE_CLEAN_TARGET = maintainer-clean
+
+clean::
+	rm -f config.guess config.sub tests/Makefile.in tests/Makefile
