--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: libfsoframework
 Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 DM-Upload-Allowed: yes
-Uploaders: Heiko Stuebner <heiko@sntech.de>
-Build-Depends: debhelper (>= 7), cdbs, pkg-config, valac (>= 0.8.1), libvala-dev (>= 0.8.1), libglib2.0-dev, libdbus-1-dev, libdbus-glib-1-dev, libfsobasics-dev (>= 0.9.0+git20100509), libasound2-dev
-Standards-Version: 3.8.4
+Uploaders: Heiko Stuebner <heiko@sntech.de>, Rico Rommel <rico@bierrommel.de>
+Build-Depends: debhelper (>= 7), cdbs, pkg-config, valac-0.12, libvala-0.12-dev (>= 0.8.1), libglib2.0-dev (>= 2.26.0), libdbus-1-dev, libdbus-glib-1-dev, libfsobasics-dev (>= 0.9.99+git20110409), libasound2-dev, libgee-dev (>=0.5.0), automake, autoconf, libtool, quilt
+Standards-Version: 3.9.2
 Section: libs
 Homepage: http://freesmartphone.org/
 Vcs-Git: git://git.debian.org/git/pkg-fso/libfsoframework.git
