--- a/debian/rules
+++ b/debian/rules
@@ -3,12 +3,10 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
+include /usr/share/cdbs/1/rules/autoreconf.mk
 
-DEB_CONFIGURE_SCRIPT := ./autogen.sh
 
 DEB_DESTDIR = $(CURDIR)/debian/tmp/
 
-DEB_MAKE_CLEAN_TARGET = maintainer-clean
-
 clean::
-	rm -f config.guess config.sub tests/Makefile.in tests/Makefile
+	rm -f tests/Makefile.in tests/Makefile
