--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 DM-Upload-Allowed: yes
 Uploaders: Heiko Stuebner <heiko@sntech.de>, Rico Rommel <rico@bierrommel.de>, Sebastian Reichel <sre@debian.org>
-Build-Depends: cdbs,
-               debhelper (>= 8.1.3),
+Build-Depends: debhelper (>= 8.1.3),
                dh-autoreconf,
                libasound2-dev,
                libdbus-1-dev,
