Build from vala source and not from precompiled c source

--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,10 @@
 %:
 	dh $@ --with quilt --with autoreconf
 
+override_dh_auto_configure:
+	find . -name *_vala.stamp | xargs rm -f
+	dh_auto_configure -- --enable-vala
+
 override_dh_strip:
 	dh_strip --dbg-package=libfsoframework-dbg
 
