Depend on libfsobasics 0.10.0

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 8.1.3),
                libasound2-dev,
                libdbus-1-dev,
                libdbus-glib-1-dev,
-               libfsobasics-dev (>= 0.9.99+git20110804),
+               libfsobasics-dev (>= 0.10.0),
                libgee-dev (>=0.5.0),
                libglib2.0-dev (>= 2.26.0),
                libvala-0.14-dev,
@@ -36,7 +36,7 @@ Description: freesmartphone.org framework library
 Package: libfsoframework-dev
 Section: libdevel
 Architecture: any
-Depends: libfsoframework0 (= ${binary:Version}), ${misc:Depends}, libdbus-1-dev, libdbus-glib-1-dev, libasound2-dev, libfsobasics-dev (>= 0.9.99+git20110804)
+Depends: libfsoframework0 (= ${binary:Version}), ${misc:Depends}, libdbus-1-dev, libdbus-glib-1-dev, libasound2-dev, libfsobasics-dev (>= 0.10.0)
 Description: Development files for libfsoframework
  This library contains utility functions for
  freesmartphone.org API implementors.
