--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,10 @@ Source: libfsoframework
 Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 DM-Upload-Allowed: yes
-Uploaders: Heiko Stuebner <heiko@sntech.de>, Rico Rommel <rico@bierrommel.de>, Sebastian Reichel <sre@debian.org>
-Build-Depends: debhelper (>= 8.1.3),
+Uploaders: Heiko Stuebner <heiko@sntech.de>,
+           Rico Rommel <rico@bierrommel.de>,
+           Sebastian Reichel <sre@debian.org>
+Build-Depends: debhelper (>= 9),
                dh-autoreconf,
                libasound2-dev,
                libdbus-1-dev,
@@ -24,7 +26,8 @@ Vcs-Browser: http://git.debian.org/?p=pkg-fso/libfsoframework.git;a=summary
 Package: libfsoframework0
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Multi-Arch: same
 Description: freesmartphone.org framework library
  This library contains utility functions for
@@ -36,7 +39,12 @@ Description: freesmartphone.org framework library
 Package: libfsoframework-dev
 Section: libdevel
 Architecture: any
-Depends: libfsoframework0 (= ${binary:Version}), ${misc:Depends}, libdbus-1-dev, libdbus-glib-1-dev, libasound2-dev, libfsobasics-dev (>= 0.11.0)
+Depends: ${misc:Depends},
+         libfsoframework0 (= ${binary:Version}),
+         libdbus-1-dev,
+         libdbus-glib-1-dev,
+         libasound2-dev,
+         libfsobasics-dev (>= 0.11.0)
 Description: Development files for libfsoframework
  This library contains utility functions for
  freesmartphone.org API implementors.
@@ -47,7 +55,8 @@ Package: libfsoframework-dbg
 Architecture: any
 Section: debug
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, libfsoframework0 (= ${binary:Version})
+Depends: ${misc:Depends},
+         libfsoframework0 (= ${binary:Version})
 Description: debugging symbols for use with libfsoframework
  This library contains utility functions for
  freesmartphone.org API implementors.
